fixed some spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -201,15 +201,19 @@ nav a {
     display: flex;
     width: 800px;
     flex-flow: row wrap;
+    justify-content: space-evenly;
 
   }
 
 
 .aboutmain div{
-width: 45%;
-margin: auto 1rem;
+width: 370px;
 border-bottom: 2px dashed black;
-padding: 1rem;
+margin: 2rem auto;
+}
+
+.aboutmain div h2{
+    margin: 1rem auto;
 }
 
 .aboutmain div button{
@@ -217,6 +221,7 @@ padding: 1rem;
     border: 2px solid black;
     background-color: white;
     border-radius: 5px;
+    margin: 1rem auto;
 }
 
 .aboutheader{
@@ -226,6 +231,7 @@ padding: 1rem;
 
 .aboutheader img{
     margin-bottom: 1rem;
+    width: auto;
 }
 
 .aboutlastSec{
